[project]
name = "chronocode"
version = "0.1.0"
description = ""
authors = [
    {name = "octokerbs",email = "kerbsod@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
